@@ -34,7 +34,7 @@ html(lang="en")
               div.form-group
                 .col-sm-3
                 .col-sm-9
-                  button.btn.btn-default Submit
+                  input.btn.btn-default(type="submit" disabled)
             if status
               p.red= msg
           div.col-md-2
