@@ -2,3 +2,4 @@
 1. make the date of the post easy to understand
 2. add the init module for test purpose
 3. added the /version get to get version
+4. password comparation
